# notion

./: main.py  pyproject.toml  requirements.txt
app/: app.py  main.py
config/: config.py
controller/: homepage.py  projectlist.py  projectpage.py
templates/: homepage.html  login.html  projectlist.html  projectpage.html  signup.html
